# Portfolio-submarine-sonar

./: .gitignore  EXTENSIONS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: config.py
docker/: .dockerignore  Dockerfile
ml_toolkit/: setup.py
ml_toolkit/eda/: __init__.py  bivariate.py  io.py  results.py  univariate.py  visualization.py  workflow.py
ml_toolkit/eda/analyzers/: __init__.py  base.py  correlation.py  distribution.py  preprocessing.py  quality.py  separability.py  strategy.py
notebooks/: 01_eda.py  01_eda_problem_framing.ipynb  02_model_training_selection.ipynb  03_threshold_optimization.ipynb
sonar_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
